[gd_scene load_steps=13 format=3 uid="uid://t8kn52kaho73"]

[ext_resource type="Script" uid="uid://be8lsnaqavabr" path="res://scripts/player.gd" id="1_y62fg"]
[ext_resource type="Texture2D" uid="uid://428ymodo14a6" path="res://sprites/player_atlas.png" id="2_2c3dc"]

[sub_resource type="AtlasTexture" id="AtlasTexture_nrdq8"]
atlas = ExtResource("2_2c3dc")

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_058dx"]
radius = 8.0
height = 22.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jsdpx"]
size = Vector2(12, 5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_u65wi"]
size = Vector2(12, 5)

[sub_resource type="Animation" id="Animation_laewt"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_hac50"]
resource_name = "bubble_jump"
length = 1.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.7, 0.8, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [7, 7, 8, 9, 10, 11, 5]
}

[sub_resource type="Animation" id="Animation_cfbtc"]
resource_name = "idle"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:frame_coords")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(0, 0)]
}

[sub_resource type="Animation" id="Animation_88pxv"]
resource_name = "jump"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [7]
}

[sub_resource type="Animation" id="Animation_1feuo"]
resource_name = "walk"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [1, 2, 3, 4, 0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_c80v2"]
_data = {
&"RESET": SubResource("Animation_laewt"),
&"bubble_jump": SubResource("Animation_hac50"),
&"idle": SubResource("Animation_cfbtc"),
&"jump": SubResource("Animation_88pxv"),
&"walk": SubResource("Animation_1feuo")
}

[node name="Player" type="CharacterBody2D"]
z_index = 5
texture_filter = 1
collision_mask = 30
script = ExtResource("1_y62fg")
jump_force = 290

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = SubResource("AtlasTexture_nrdq8")
hframes = 7
vframes = 7

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_058dx")

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(3, 3)

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="TouchScreenButton" type="TouchScreenButton" parent="CanvasLayer"]
position = Vector2(75, 53)
scale = Vector2(0.6875, 0.6875)
action = "bubble"
visibility_mode = 1

[node name="TouchScreenButton2" type="TouchScreenButton" parent="CanvasLayer"]
position = Vector2(126, 52)
scale = Vector2(0.6875, 0.6875)
action = "jump"
visibility_mode = 1

[node name="TouchScreenButton3" type="TouchScreenButton" parent="CanvasLayer"]
position = Vector2(-118, 54)
scale = Vector2(0.6875, 0.6875)
passby_press = true
action = "right"
visibility_mode = 1

[node name="TouchScreenButton4" type="TouchScreenButton" parent="CanvasLayer"]
position = Vector2(-171, 55)
scale = Vector2(0.6875, 0.6875)
passby_press = true
action = "left"
visibility_mode = 1

[node name="ObjectDetector" type="RayCast2D" parent="."]
target_position = Vector2(0, 0)
collision_mask = 25

[node name="PickupPosition" type="Marker2D" parent="."]
position = Vector2(0, -32)

[node name="BubblePosition" type="Marker2D" parent="."]

[node name="AreaPlatform" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D2" type="CollisionShape2D" parent="AreaPlatform"]
position = Vector2(0, -12)
shape = SubResource("RectangleShape2D_jsdpx")

[node name="AreaHit" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="AreaHit"]
position = Vector2(0, 11)
shape = SubResource("RectangleShape2D_u65wi")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../Sprite2D")
libraries = {
&"": SubResource("AnimationLibrary_c80v2")
}
speed_scale = -2.769

[node name="PlatformDetector" type="RayCast2D" parent="."]

[connection signal="body_entered" from="AreaPlatform" to="." method="_on_area_platform_body_entered"]
[connection signal="body_entered" from="AreaHit" to="." method="_on_area_hit_body_entered"]
